...
        android:id="@+id/til_bill_amount"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/edt_bill_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_bill_amount"
            android:hint="@string/hint_bill_amount"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceLarge" />
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/total_amount" />

    <TextView
        android:id="@+id/txt_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
...
